[package]
name = "typst-bingo"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib","rlib"]
wasm-bindgen = "0.2"
[dependencies]
smolprng = {version = "0.1.6", features = ["no_std"]}
wasm-minimal-protocol.git = "https://github.com/astrale-sharp/wasm-minimal-protocol"
wasm-minimal-protocol.rev = "637508c184c7bfad7caadf109e2fa3871d99c57e"
[profile.release]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
